--- a/requirements.txt
+++ b/requirements.txt
@@ -8,6 +8,7 @@ wheel>=0.29
 numpy
 pandas
 scikit-learn
+tensorflow
 
 # tests/linter
 black
@@ -27,3 +28,7 @@ six>=1.14
 joblib
 memoized-property
 termcolor
+
+# graphical tools
+matplotlib
+seaborn
