--- a/requirements.txt
+++ b/requirements.txt
@@ -9,6 +9,7 @@ numpy
 pandas
 scikit-learn
 tensorflow
+tensorflow-io
 
 # tests/linter
 black
@@ -28,8 +29,4 @@ six>=1.14
 joblib
 memoized-property
 termcolor
-opencv-python
 
-# graphical tools
-matplotlib
-seaborn
